--- a/translations/kangyur/translations/060-001_toh172-the_question_of_manjusri.xml
+++ b/translations/kangyur/translations/060-001_toh172-the_question_of_manjusri.xml
@@ -29,7 +29,7 @@
         <editor role="finalReviewer" ref="contributors.xml#person-74">Ryan Damron</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.14 <date>2022</date>
+                <edition>v 1.0.15 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -61,7 +61,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-01-18T14:49:09.26Z" user="celso">18/01/2023 14:49:09</note>
+        <note type="lastUpdated" date-time="2023-04-19T12:49:59.73Z" user="admin">19/04/2023 12:49:59</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-06T14:17:10.983Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-11-24T14:27:25.922Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-24T14:27:25.922Z" user="line-tofte">Auto
@@ -115,6 +115,7 @@
           <note type="updated" update="text-version" value="1.0.12" date-time="2022-07-26T06:18:10.982Z" user="cabie-sim">Auto (update-titles)</note>
           <note type="updated" update="text-version" value="1.0.13" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
           <note type="updated" update="text-version" value="1.0.14" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+          <note type="updated" update="text-version" value="1.0.15" date-time="2023-04-19T12:49:56.873Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -749,8 +750,8 @@
               <term>armband</term>
               <term xml:lang="Bo-Ltn" status="verified">dpung rgyan </term>
               <term xml:lang="bo">དཔུང་རྒྱན།</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">keyūra</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">aṅgada</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">keyūra</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">aṅgada</term>
               <term type="definition">Seventy-fourth of the eighty designs on the palms and soles of the Tathāgata.</term>
             </gloss>
           </item>
@@ -759,8 +760,8 @@
               <term>arrow</term>
               <term xml:lang="Bo-Ltn" status="verified">mda’ </term>
               <term xml:lang="bo">མདའ།</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">śara</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">iṣu</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">śara</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">iṣu</term>
               <term type="definition">Thirty-seventh of the eighty designs on the palms and soles of the Tathāgata.</term>
             </gloss>
           </item>
@@ -773,8 +774,8 @@
               <term xml:lang="bo">སྟ་གྲི།</term>
               <term xml:lang="Bo-Ltn" status="verified">dgra sta </term>
               <term xml:lang="bo">དགྲ་སྟ།</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">paraśu</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">kuṭhārikā</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">paraśu</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">kuṭhārikā</term>
               <term type="definition">Forty-second of the eighty designs on the palms and soles of the Tathāgata.</term>
             </gloss>
           </item>
@@ -838,8 +839,8 @@
               <term>boat</term>
               <term xml:lang="Bo-Ltn" status="verified">gru </term>
               <term xml:lang="bo">གྲུ།</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">nau</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">jalayāna</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">nau</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">jalayāna</term>
               <term type="definition">Forty-fourth of the eighty designs on the palms and soles of the Tathāgata.</term>
             </gloss>
           </item>
@@ -887,8 +888,8 @@
               <term>bow</term>
               <term xml:lang="Bo-Ltn" status="verified">gzhu </term>
               <term xml:lang="bo">གཞུ།</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">dhanu</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">cāpa</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">dhanu</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">cāpa</term>
               <term type="definition">Thirty-sixth of the eighty designs on the palms and soles of the Tathāgata.</term>
             </gloss>
           </item>
@@ -906,8 +907,8 @@
               <term>bracelet</term>
               <term xml:lang="Bo-Ltn" status="verified">gdu bu </term>
               <term xml:lang="bo">གདུ་བུ།</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">valaya</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">parihāṭaka</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">valaya</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">parihāṭaka</term>
               <term type="definition">Seventy-third of the eighty designs on the palms and soles of the Tathāgata.</term>
             </gloss>
           </item>
@@ -1082,9 +1083,9 @@
               <term>diadem</term>
               <term xml:lang="Bo-Ltn" status="verified">cod pan </term>
               <term xml:lang="bo">ཅོད་པན།</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">mukuṭa</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">kirīṭi</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">kirīṭa</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">mukuṭa</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">kirīṭi</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">kirīṭa</term>
               <term type="definition">Sixth of the eighty designs on the palms and soles of the Tathāgata.</term>
             </gloss>
           </item>
@@ -1132,8 +1133,8 @@
               <term>earring</term>
               <term xml:lang="Bo-Ltn" status="verified">rna cha </term>
               <term xml:lang="bo">རྣ་ཆ།</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">karṇika</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">kuṇḍala</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">karṇika</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">kuṇḍala</term>
               <term type="definition">Seventy-fifth of the eighty designs on the palms and soles of the Tathāgata.</term>
             </gloss>
           </item>
@@ -1233,7 +1234,7 @@
               <term xml:lang="bo">དགེ་བའི་བསྟན།</term>
               <term xml:lang="Bo-Ltn" status="verified">khri stan bzang po </term>
               <term xml:lang="bo">ཁྲི་སྟན་བཟང་པོ།</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">bhadrāsana</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">bhadrāsana</term>
               <term type="definition">Sixty-third of the eighty designs on the palms and soles of the Tathāgata.</term>
             </gloss>
           </item>
@@ -1408,7 +1409,7 @@
               <term xml:lang="Bo-Ltn" status="verified">spu khung bu re re nas skyes pa </term>
               <term xml:lang="bo">སྤུ་ཁུང་བུ་རེ་རེ་ནས་སྐྱེས་པ།</term>
               <term xml:lang="Sa-Ltn"/>
-              <!--<term xml:lang="Sa-Ltn" type="semanticReconstruction">ekaika­roma­kūpebhya ekaikāni romāṇi jātāni</term>-->
+              <!--<term xml:lang="Sa-Ltn" type="reconstructedSemantic">ekaika­roma­kūpebhya ekaikāni romāṇi jātāni</term>-->
               <term type="definition">Listed in <title xml:lang="en">The Question of Mañjuśrī</title> as the thirteenth of the thirty-two signs of a
                 great being.</term>
             </gloss>
@@ -1515,7 +1516,7 @@
               <term>large and slender tongue</term>
               <term xml:lang="Bo-Ltn" status="verified">lce che zhing srab pa </term>
               <term xml:lang="bo">ལྕེ་ཆེ་ཞིང་སྲབ་པ།</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">prabhūta­tanu­jihva</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">prabhūta­tanu­jihva</term>
               <term type="definition">Listed in <title xml:lang="en">The Question of Mañjuśrī</title> as the tenth of the thirty-two signs of a great
                 being. In most other sources, the Tibetan is rendered as “very long and slender tongue” (<foreign xml:lang="Bo-Ltn" type="term">ljags
                   shin tu ring zhing srab pa</foreign>), but the underlying Sanskrit is likely the same or similar at the very least.</term>
@@ -1597,8 +1598,8 @@
               <term>mirror</term>
               <term xml:lang="Bo-Ltn" status="verified">me long </term>
               <term xml:lang="bo">མེ་ལོང་།</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">ādarśa</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">darpaṇa</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">ādarśa</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">darpaṇa</term>
               <term type="definition">Sixty-fourth of the eighty designs on the palms and soles of the Tathāgata.</term>
             </gloss>
           </item>
@@ -1656,7 +1657,7 @@
               <term xml:lang="bo">ཞབས་དང་ཕྱག་གི་མཐིལ་འཇམ་ཞིང་མཉེན་པ།</term>
               <term xml:lang="Bo-Ltn" status="verified">zhabs dang phyag gi mthil ’jam zhing gzhon sha chags pa </term>
               <term xml:lang="bo">ཞབས་དང་ཕྱག་གི་མཐིལ་འཇམ་ཞིང་གཞོན་ཤ་ཆགས་པ།</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">mṛdu­taruṇa­hasta­pāda­tala</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">mṛdu­taruṇa­hasta­pāda­tala</term>
               <term type="definition">Listed in <title xml:lang="en">The Question of Mañjuśrī</title> as the eighteenth of the thirty-two signs of a
                 great being.</term>
             </gloss>
@@ -1861,8 +1862,8 @@
               <term>ring</term>
               <term xml:lang="Bo-Ltn" status="verified">sor gdub </term>
               <term xml:lang="bo">སོར་གདུབ།</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">aṅgulīyaka</term>
-              <term xml:lang="Sa-Ltn" type="semanticReconstruction">valaka</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">aṅgulīyaka</term>
+              <term xml:lang="Sa-Ltn" type="reconstructedSemantic">valaka</term>
               <term type="definition">Seventy-sixth of the eighty designs on the palms and soles of the Tathāgata. More specifically, it is a “finger
                 ring.”</term>
             </gloss>
