--- a/translations/kangyur/translations/061-004_toh184-the_sutra_teaching_the_conduct_of_a_bodhisattva.xml
+++ b/translations/kangyur/translations/061-004_toh184-the_sutra_teaching_the_conduct_of_a_bodhisattva.xml
@@ -27,7 +27,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-262">David Higgins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.9 <date>2021</date>
+                <edition>v 1.1.10 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -61,7 +61,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T17:11:42.048Z" user="celso">18/01/2023 17:11:42</note>
+                <note type="lastUpdated" date-time="2023-04-19T12:52:27.756Z" user="admin">19/04/2023 12:52:27</note>
                 <note type="updated" update="text-version" value="" date-time="2019-09-25T06:26:52.399Z" user="andreas">0.1 2019</note>
                 <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2019-12-09T08:33:44.393Z" user="andreas">2.e</note>
@@ -96,6 +96,7 @@
     <note type="updated" update="text-version" value="1.1.7" date-time="2022-11-10T19:48:08.422Z" user="john">Replaced "crown protuberance" with uṣṇīṣa.</note>
     <note type="updated" update="text-version" value="1.1.8" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.1.9" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.1.10" date-time="2023-04-19T12:52:24.911Z" user="celso">1.1.10</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1484,7 +1485,7 @@
                             <term>Amogha­bala­kīrti</term>
                             <term xml:lang="Bo-Ltn">stobs dang grags pa don yod pa </term>
                             <term xml:lang="bo">སྟོབས་དང་གྲགས་པ་དོན་ཡོད་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Amogha­bala­kīrti</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Amogha­bala­kīrti</term>
                             <term type="definition">The name that the Buddha Śākyamuni gives in his prophecy of the boy
                                 Ratnadatta’s attainment of Buddhahood. </term>
                         </gloss>
@@ -1512,7 +1513,7 @@
                             <term>Ananta­mati­pratipatti</term>
                             <term xml:lang="Bo-Ltn">blo mtha’ yas sgrub pa </term>
                             <term xml:lang="bo">བློ་མཐའ་ཡས་སྒྲུབ་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Ananta­mati­pratipatti</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Ananta­mati­pratipatti</term>
                             <term type="definition">The name of a bodhisattva. “Accomplished Limitless
                                 Intellect.”</term>
                         </gloss>
@@ -1522,7 +1523,7 @@
                             <term>Ananta­prabhāsamati</term>
                             <term xml:lang="Bo-Ltn">mtha’ yas snang ba’i blo gros </term>
                             <term xml:lang="bo">མཐའ་ཡས་སྣང་བའི་བློ་གྲོས།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Ananta­prabhāsamati</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Ananta­prabhāsamati</term>
                             <term type="definition">The name of a bodhisattva. “Infinite Radiant Intellect.”</term>
                         </gloss>
                     </item>
@@ -1558,7 +1559,7 @@
                             <term>Āśugandhadāna­kusumita</term>
                             <term xml:lang="Bo-Ltn">spos dri myur sbyin me tog kun tu rgyas </term>
                             <term xml:lang="bo">སྤོས་དྲི་མྱུར་སྦྱིན་མེ་ཏོག་ཀུན་ཏུ་རྒྱས།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Āśugandhadāna­kusumita</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Āśugandhadāna­kusumita</term>
                             <term type="definition">The name of a bodhisattva. “Instantly Fragrant Blooming
                                 Flower.”</term>
                         </gloss>
@@ -1577,7 +1578,7 @@
                             <term>Avyabhicāra­prabhāva</term>
                             <term xml:lang="Bo-Ltn">khrul pa med pa’i mthu rtsal </term>
                             <term xml:lang="bo">ཁྲུལ་པ་མེད་པའི་མཐུ་རྩལ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Avyabhicāra­prabhāva</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Avyabhicāra­prabhāva</term>
                             <term type="definition">The name of a bodhisattva. “Unerring Power.”</term>
                         </gloss>
                     </item>
@@ -1605,7 +1606,7 @@
                             <term>Gandheśvara­rāja</term>
                             <term xml:lang="Bo-Ltn">spos kyi dbang phyug rgyal po </term>
                             <term xml:lang="bo">སྤོས་ཀྱི་དབང་ཕྱུག་རྒྱལ་པོ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Gandheśvara­rāja</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Gandheśvara­rāja</term>
                             <term type="definition">The name of a bodhisattva. “Fragrant Sovereign King.”</term>
                         </gloss>
                     </item>
@@ -1633,7 +1634,7 @@
                             <term>Jyeṣṭhakūṭa</term>
                             <term xml:lang="Bo-Ltn">gtso bo brtsegs </term>
                             <term xml:lang="bo">གཙོ་བོ་བརྩེགས།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Jyeṣṭhakūṭa</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Jyeṣṭhakūṭa</term>
                             <term type="definition">The name of a bodhisattva. “Highest Summit.”</term>
                         </gloss>
                     </item>
@@ -1717,7 +1718,7 @@
                             <term>Merudāra</term>
                             <term xml:lang="Bo-Ltn">lhun po’i lto </term>
                             <term xml:lang="bo">ལྷུན་པོའི་ལྟོ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Merudāra</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Merudāra</term>
                             <term type="definition">The name of a bodhisattva. “Meru’s Inner Chamber.”</term>
                         </gloss>
                     </item>
@@ -1801,7 +1802,7 @@
                             <term>Sarva­dharma­nityadarśana­dhīmat</term>
                             <term xml:lang="Bo-Ltn">chos thams cad la rtag tu lta ba’i blo ldan </term>
                             <term xml:lang="bo">ཆོས་ཐམས་ཅད་ལ་རྟག་ཏུ་ལྟ་བའི་བློ་ལྡན།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Sarva­dharma­nityadarśana­dhīmat</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Sarva­dharma­nityadarśana­dhīmat</term>
                             <term type="definition">The name of a bodhisattva. “Intelligence That Always Sees All
                                 Phenomena.”</term>
                         </gloss>
@@ -1811,7 +1812,7 @@
                             <term>Sarvasa­ddharmā­vismaraṇasthita</term>
                             <term xml:lang="Bo-Ltn">dam pa’i chos thams cad mi brjed par gnas pa </term>
                             <term xml:lang="bo">དམ་པའི་ཆོས་ཐམས་ཅད་མི་བརྗེད་པར་གནས་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Sarvasa­ddharmā­vismaraṇasthita</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Sarvasa­ddharmā­vismaraṇasthita</term>
                             <term type="definition">The name of a bodhisattva. “Not-Forgetting All the Sacred
                                 Teachings”</term>
                         </gloss>
@@ -1821,7 +1822,7 @@
                             <term>Sarva­śokāndha­kārāpoha­mati</term>
                             <term xml:lang="Bo-Ltn">mya ngan gyi mun pa thams cad sel ba’i blo gros </term>
                             <term xml:lang="bo">མྱ་ངན་གྱི་མུན་པ་ཐམས་ཅད་སེལ་བའི་བློ་གྲོས།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Sarva­śokāndha­kārāpoha­mati</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Sarva­śokāndha­kārāpoha­mati</term>
                             <term type="definition">The name of a bodhisattva. “Intelligence Dispelling All Darkness of
                                 Sorrow.”</term>
                         </gloss>
@@ -1831,7 +1832,7 @@
                             <term>Sarva­viṣamadarśin</term>
                             <term xml:lang="Bo-Ltn">mi mnyam pa thams cad ston pa </term>
                             <term xml:lang="bo">མི་མཉམ་པ་ཐམས་ཅད་སྟོན་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Sarva­viṣamadarśin</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Sarva­viṣamadarśin</term>
                             <term type="definition">The name of a bodhisattva. “Unequaled Teacher of All.”</term>
                         </gloss>
                     </item>
@@ -1840,7 +1841,7 @@
                             <term>Siddhārtha­cintin</term>
                             <term xml:lang="Bo-Ltn">don grub sems pa </term>
                             <term xml:lang="bo">དོན་གྲུབ་སེམས་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Siddhārtha­cintin</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Siddhārtha­cintin</term>
                             <term type="definition">The name of a bodhisattva. “Intending to Accomplish the
                                 Goal.”</term>
                         </gloss>
@@ -1869,7 +1870,7 @@
                             <term>Suvarṇottama­prabhā­śrī</term>
                             <term xml:lang="Bo-Ltn">gser mchog ’od dpal </term>
                             <term xml:lang="bo">གསེར་མཆོག་འོད་དཔལ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Suvarṇottama­prabhā­śrī</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Suvarṇottama­prabhā­śrī</term>
                             <term type="definition">The name of a bodhisattva. “Glorious Golden Light.”</term>
                         </gloss>
                     </item>
@@ -1878,7 +1879,7 @@
                             <term>Tat­svabhāvā­pratiṣṭhita</term>
                             <term xml:lang="Bo-Ltn">de’i rang bzhin du mi gnas pa </term>
                             <term xml:lang="bo">དེའི་རང་བཞིན་དུ་མི་གནས་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Tat­svabhāvā­pratiṣṭhita</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Tat­svabhāvā­pratiṣṭhita</term>
                             <term type="definition">The name of a bodhisattva. “Naturally Nonabiding.”</term>
                         </gloss>
                     </item>
@@ -1887,7 +1888,7 @@
                             <term>Vikrama­saṃdarśa­kacintin</term>
                             <term xml:lang="Bo-Ltn">rtsal brtan por sems pa </term>
                             <term xml:lang="bo">རྩལ་བརྟན་པོར་སེམས་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Vikrama­saṃdarśa­kacintin</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Vikrama­saṃdarśa­kacintin</term>
                             <term type="definition">The name of a bodhisattva. “Capable Steadfast Intention.”</term>
                         </gloss>
                     </item>
@@ -1896,7 +1897,7 @@
                             <term>Vikrīḍamāna</term>
                             <term xml:lang="Bo-Ltn">rnam par rtse </term>
                             <term xml:lang="bo">རྣམ་པར་རྩེ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Vikrīḍamāna</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Vikrīḍamāna</term>
                             <term type="definition">The name of a bodhisattva. “Playful One.”</term>
                         </gloss>
                     </item>
@@ -1923,7 +1924,7 @@
                             <term>Vīrya</term>
                             <term xml:lang="Bo-Ltn">brtson ’grus </term>
                             <term xml:lang="bo">བརྩོན་འགྲུས།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Vīrya</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Vīrya</term>
                             <term type="definition">The name of a bodhisattva. “Effort.”</term>
                         </gloss>
                     </item>
