--- a/translations/kangyur/translations/068-004_toh270,512,852-the_seven_buddhas.xml
+++ b/translations/kangyur/translations/068-004_toh270,512,852-the_seven_buddhas.xml
@@ -29,7 +29,7 @@
                 <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.15 <date>2022</date>
+                <edition>v 1.2.16 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -83,7 +83,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T17:06:02.211Z" user="celso">18/01/2023 17:06:02</note>
+                <note type="lastUpdated" date-time="2023-04-19T13:05:22.054Z" user="admin">19/04/2023 13:05:22</note>
 
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-10T08:01:19.031Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2019-12-19T07:24:08.698Z" user="andreas">2.e</note>
@@ -118,7 +118,7 @@
     <note type="updated" update="text-version" value="1.2.9" date-time="2021-03-12T18:57:32.455Z" user="celso">Non-breaking spaces before dandas</note>
     <note type="updated" update="text-version" value="1.2.10" date-time="2021-03-16T16:03:05.429Z" user="celso">Note with @key added explaining the folio shift in toh512</note>
     <note type="updated" update="text-version" value="1.2.11" date-time="2021-03-17T16:07:41.219Z" user="celso">fixed minor typo</note>
-    <note type="updated" update="text-version" value="1.2.12" date-time="2021-09-23T19:53:39.488Z" user="celso">"Compendium of Incantations" to "Compendium of Dhāraṇī"</note>    <note type="updated" update="text-version" value="1.2.13" date-time="2022-02-14T19:31:12.331Z" user="laura">Typo in glossary: སངསས་རྒྱས་</note>    <note type="updated" update="text-version" value="1.2.14" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.15" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.2.12" date-time="2021-09-23T19:53:39.488Z" user="celso">"Compendium of Incantations" to "Compendium of Dhāraṇī"</note>    <note type="updated" update="text-version" value="1.2.13" date-time="2022-02-14T19:31:12.331Z" user="laura">Typo in glossary: སངསས་རྒྱས་</note>    <note type="updated" update="text-version" value="1.2.14" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.15" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.2.16" date-time="2023-04-19T13:05:19.199Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1182,8 +1182,8 @@
                 <term>possessed by a spirit</term>
                 <term xml:lang="Bo-Ltn">’byung pos zin </term>
                 <term xml:lang="bo">འབྱུང་པོས་ཟིན།</term>
-                <term xml:lang="Sa-Ltn" type="semanticReconstruction">bhūtagraha</term> 
-                    <term xml:lang="Sa-Ltn" type="semanticReconstruction">bhūtāveśa</term>
+                <term xml:lang="Sa-Ltn" type="reconstructedSemantic">bhūtagraha</term> 
+                    <term xml:lang="Sa-Ltn" type="reconstructedSemantic">bhūtāveśa</term>
                 <term type="definition">This is likely an alternate Tibetan translation for the
                     Sanskrit phrase <foreign xml:lang="Sa-Ltn" type="term">*bhūtagraha</foreign>,
                     more commonly rendered in Tibetan as <foreign xml:lang="Bo-Ltn" type="term">’byung po’i gdon</foreign>. The phrase shares semantic resonances with the
