--- a/translations/kangyur/translations/068-007_toh273,511,853-the_twelve_buddhas.xml
+++ b/translations/kangyur/translations/068-007_toh273,511,853-the_twelve_buddhas.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-139">Dr. John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.17 <date>2022</date>
+                <edition>v 1.2.18 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -88,7 +88,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T17:00:41.98Z" user="celso">18/01/2023 17:00:41</note>
+                <note type="lastUpdated" date-time="2023-04-19T13:07:52.468Z" user="admin">19/04/2023 13:07:52</note>
 
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-10T08:01:54.017Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2019-12-19T07:24:49.958Z" user="andreas">2.d</note>
@@ -123,6 +123,7 @@
     <note type="updated" update="text-version" value="1.2.15" date-time="2022-03-29T14:43:40.699Z" user="martina-cotter">Updated issue with glossary term in translation.</note>
     <note type="updated" update="text-version" value="1.2.16" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.2.17" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.2.18" date-time="2023-04-19T13:07:49.604Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -989,7 +990,7 @@
                             <term>King of Jewels</term>
                             <term xml:lang="Bo-Ltn">rin chen rgyal po </term>
                             <term xml:lang="bo">རིན་ཆེན་རྒྱལ་པོ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Maṇirāja</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Maṇirāja</term>
                             <term type="definition">The abbreviated name of a tathāgata who presides over the
                                 buddhafield Full of Pearls. The name of a bodhisattva. The full name of this tathagata in this work is King of Jewels Devoid of Desire Whose Supreme Emanation Has Arisen from the Expanse of Phenomena, Who Is Ornamented by Boundless Sunlight from the Top of His Crown Protuberance and by an Aspiration Like Moonlight, Whose Body Is Bedecked and Elegantly Ornamented with Offerings of Excellent Perfumes, Who Has a Body Like a Lotus Flower Lovely as a Resplendent Blue Beryl Gemstone, the Light of the Good Qualities of Whom Are as Beautiful as a Glorious Pure Sky Free of Dust.</term>
                         </gloss>
