--- a/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
+++ b/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
@@ -20,7 +20,7 @@
         <editor role="reviser" ref="eft:person-378">Jin kyoung Choi</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.2 <date>2023</date>
+                <edition>v 1.1.3 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -54,7 +54,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-04-17T07:51:47.024Z" user="admin">17/04/2023 07:51:47</note>
+        <note type="lastUpdated" date-time="2023-04-19T13:10:48.196Z" user="admin">19/04/2023 13:10:48</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">3</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T09:23:16.27Z" user="line-tofte">Auto (update-contributors)</note>
@@ -112,6 +112,7 @@
           <note type="updated" update="text-version" value="1.1.1" date-time="2023-03-27T15:16:34.71Z" user="celso">added custom milestones at 1.14 according to new markup attributes</note>
           <note type="updated" update="translation-status" value="1" date-time="2023-04-17T07:51:42.618Z" user="sameer">1</note>
           <note type="updated" update="text-version" value="1.1.2" date-time="2023-04-17T07:51:42.618Z" user="sameer">Included in App v 3.0</note>
+          <note type="updated" update="text-version" value="1.1.3" date-time="2023-04-19T13:10:45.303Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -2025,8 +2026,8 @@
           <item>
                         <gloss xml:id="UT22084-072-010-693" type="term" mode="match">
                             <term>Great Brahmā gods</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">tshangs chen</term>
-                            <term xml:lang="bo" type="sourceAttested">ཚངས་ཆེན།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" status="verified">tshangs chen</term>
+                            <term xml:lang="bo" type="attestedSource">ཚངས་ཆེན།</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">mahābrahman</term>
                             <term type="definition">The gods in the abode of Mahābrahmā, the fourth of the four classes of gods of the form realm in the first dhyāna. The name is the same for both the location and the inhabitant deities. </term>
                         </gloss>
