--- a/translations/kangyur/translations/072-014_toh314-the_sutra_of_the_entry_into_the_gloomy_forest.xml
+++ b/translations/kangyur/translations/072-014_toh314-the_sutra_of_the_entry_into_the_gloomy_forest.xml
@@ -50,7 +50,7 @@
                         </titleStmt>
 
                         <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -95,7 +95,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-01-18T15:33:26.825Z" user="celso">18/01/2023 15:33:26</note>
+                                <note type="lastUpdated" date-time="2023-04-19T13:13:59.436Z" user="admin">19/04/2023 13:13:59</note>
 
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T10:11:47.483Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-31T08:05:42.822Z" user="line-tofte">Auto
@@ -156,6 +156,7 @@
                             <note type="updated" update="text-version" value="1.0.1" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+                            <note type="updated" update="text-version" value="1.0.4" date-time="2023-04-19T13:13:56.585Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -1539,7 +1540,7 @@
                                                   <term>Kambala</term>
                                                   <term xml:lang="Bo-Ltn" status="verified">la ba can </term>
                             <term xml:lang="bo">ལ་བ་ཅན།</term>
-                                                <term xml:lang="Sa-Ltn" type="semanticReconstruction">Kambala</term>
+                                                <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Kambala</term>
                                                   <term type="definition">The name of the venerable
                                                   Pradarśa’s father.</term>
                                                 </gloss>
@@ -1549,7 +1550,7 @@
                                                   <term>Pradarśa</term>
                                                   <term xml:lang="Bo-Ltn" status="verified">rab mthong </term>
                             <term xml:lang="bo">རབ་མཐོང་།</term>
-                                                <term xml:lang="Sa-Ltn" type="semanticReconstruction">Pradarśa</term>
+                                                <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Pradarśa</term>
                                                   <term type="definition">The eminent monk who
                                                   brought the Buddhist community to the Gloomy
                                                   Forest.</term>
@@ -1705,7 +1706,7 @@
                                                   <term xml:lang="Bo-Ltn" status="verified">chos ’phags </term>
                             <term xml:lang="bo">ཆོས་འཕགས།</term>
                             
-                                                <term xml:lang="Sa-Ltn" type="semanticReconstruction">Dharmodgata</term>
+                                                <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Dharmodgata</term>
                                                   <term type="definition">A monk of a previous
                                                   buddha.</term>
                                                 </gloss>
@@ -1735,7 +1736,7 @@
                                                   <term>Śeḍoka</term>
                                                   <term xml:lang="Bo-Ltn" status="verified">she Do ka </term>
                             <term xml:lang="bo">ཤེ་ཌོ་ཀ</term>
-                                                <term xml:lang="Sa-Ltn" type="transliterationReconstruction">Śeḍoka</term>
+                                                <term xml:lang="Sa-Ltn" type="reconstructedPhonetic">Śeḍoka</term>
                                                   <term type="definition">A monk of a previous
                                                   buddha. If the Tibetan transliteration is correct,
                                                   this name is probably not of Sanskrit
@@ -1827,7 +1828,7 @@
                                                   <term xml:lang="Bo-Ltn" status="verified">gnod sbyin gyi sde dpon
                                                   brgyad po </term>
                             <term xml:lang="bo">གནོད་སྦྱིན་གྱི་སྡེ་དཔོན་བརྒྱད་པོ།</term>
-                                                <term xml:lang="Sa-Ltn" type="semanticReconstruction">aṣṭa­yakṣa­senāpati</term>
+                                                <term xml:lang="Sa-Ltn" type="reconstructedSemantic">aṣṭa­yakṣa­senāpati</term>
                                                   <term type="definition">Lists of the generals of
                                                   the yakṣas are frequent in Buddhist scripture.
                                                   They can variously consist in five, eight, twelve,
@@ -1924,7 +1925,7 @@
                                                   <term xml:lang="Bo-Ltn" status="verified">gnod sbyin ma chen mo
                                                   brgyad </term>
                             <term xml:lang="bo">གནོད་སྦྱིན་མ་ཆེན་མོ་བརྒྱད།</term>
-                                                <term xml:lang="Sa-Ltn" type="semanticReconstruction">aṣṭamahāyakṣī</term>
+                                                <term xml:lang="Sa-Ltn" type="reconstructedSemantic">aṣṭamahāyakṣī</term>
                                                   <term type="definition">This list of eight yakṣa
                                                   ladies is probably unique to this sūtra. They are
                                                   Aśiḍi, Many Sons, Hanging Down, Fully Hanging,
@@ -2019,7 +2020,7 @@
                                                   <term>eight great nāgas</term>
                                                   <term xml:lang="Bo-Ltn" status="verified">klu chen po brgyad po </term>
                             <term xml:lang="bo">ཀླུ་ཆེན་པོ་བརྒྱད་པོ།</term>
-                                                <term xml:lang="Sa-Ltn" type="semanticReconstruction">aṣṭamahānāga</term>
+                                                <term xml:lang="Sa-Ltn" type="reconstructedSemantic">aṣṭamahānāga</term>
                                                   <term type="definition">This list of eight nāgas
                                                   is probably unique to this sūtra. They are Tawny,
                                                   Scent, Watery, Wrathful, Staircase to Heaven,
@@ -2113,7 +2114,7 @@
                                                 <term xml:lang="Bo-Ltn" status="verified">klu mo brgyad po </term>
                             <term xml:lang="bo">ཀླུ་མོ་བརྒྱད་པོ།</term>
                             
-                                                <term xml:lang="Sa-Ltn" type="semanticReconstruction">aṣṭamahānāgī</term>
+                                                <term xml:lang="Sa-Ltn" type="reconstructedSemantic">aṣṭamahānāgī</term>
                                                   <term type="definition">This list of eight nāga
                                                   ladies may be unique to this sūtra. They are
                                                   Darkness, Eager to Leave, Seer, Cool, Load
