--- a/translations/kangyur/translations/087-008_toh503-the_sutra_describing_in_full_the_specific_previous_vows_of_the_seven_tathagatas.xml
+++ b/translations/kangyur/translations/087-008_toh503-the_sutra_describing_in_full_the_specific_previous_vows_of_the_seven_tathagatas.xml
@@ -37,7 +37,7 @@
                 <sponsor ref="sponsors.xml#sponsor-2">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.7 <date>2021</date>
+                <edition>v 1.0.8 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -73,7 +73,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-26T19:50:33.841Z" user="martina-cotter">26/01/2023 19:50:33</note>
+                <note type="lastUpdated" date-time="2023-04-19T13:22:12.317Z" user="admin">19/04/2023 13:22:12</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-07-18T16:46:58.303Z" user="john">2.g</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-27T13:03:41.909Z" user="mike">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:03:41.909Z" user="mike">2.h</note>
@@ -108,6 +108,7 @@
                 <note type="updated" update="text-version" value="1.0.5" date-time="2022-07-26T07:27:58.499Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.7" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.0.8" date-time="2023-04-19T13:22:09.458Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -3217,8 +3218,8 @@
                             <term>Kuśala­tejonir­ghoṣa­rāja</term>
                             <term xml:lang="Bo-Ltn">mkhas pa gzi brjid kyi sgra dbyangs kyi rgyal po </term>
                             <term xml:lang="bo">མཁས་པ་གཟི་བརྗིད་ཀྱི་སྒྲ་དབྱངས་ཀྱི་རྒྱལ་པོ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Kuśala­tejonir­ghoṣa­rāja</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">paṇḍita­tejaḥsvara­ghoṣa­rāja</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Kuśala­tejonir­ghoṣa­rāja</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">paṇḍita­tejaḥsvara­ghoṣa­rāja</term>
                             <term type="definition">The thus-gone one residing in the buddhafield Abounding in
                                 Jewels.</term>
                         </gloss>
