--- a/translations/kangyur/placeholders/088-013_toh519,979-the_incantation_the_essence_of_dependent_arising.xml
+++ b/translations/kangyur/placeholders/088-013_toh519,979-the_incantation_the_essence_of_dependent_arising.xml
@@ -13,8 +13,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rten cing 'brel par 'byung ba'i snying po'i cho ga'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryapratītyasamutpāda­hṛdayavidhidhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-088-013"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh519" type="text">
@@ -37,7 +42,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:32:53.832Z" user="celso">23/09/2021 17:32:53</note>
+                <note type="lastUpdated" date-time="2023-04-20T06:57:51.253Z" user="admin">20/04/2023 06:57:51</note>    <note type="updated" update="translation-status" value="3" date-time="2023-04-20T06:57:46.473Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-04-20T06:57:46.473Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
